Seek bar functionality

--- a/static/index.html
+++ b/static/index.html
@@ -63,7 +63,10 @@
                 <section class="mdl-card mdl-shadow--8dp mdl-layout__header-row card no-shrink">
                     <h6 id="progress_time">00:00</h6>
                     <input class="mdl-slider mdl-js-slider" type="range"
-                               min="0" max="1" value="1" tabindex="0" id="progress"/>
+                           min="0" :max="progress_bar_max" value="1" tabindex="0" id="progress"
+                           v-model="progress"
+                           @change="onSeek"
+                    />
                     <h6 id="duration_time">{{ now_playing_duration }}</h6>
                 </section>
             </div>
