Remove incorrectly formatted comment so that overriding the style actually works

--- a/static/index.html
+++ b/static/index.html
@@ -179,7 +179,7 @@
                         v-if="!queue.queue || queue.queue.length === 0">
                     <span class="mdl-list__item-primary-content compress">
                         <div>
-                            <span>No music in queue. Search to add some!</span>
+                            <span style="color:white;">No music in queue. Search to add some!</span>
                         </div>
                     </span>
                     </li>
@@ -198,7 +198,6 @@
         crossorigin="anonymous"></script>
 <script src="https://unpkg.com/vue"></script>
 <script src="static/scripts/main.js"></script>
-<script src="static/scripts/controller.js"></script>
 
 </body>
 </html>
